2013-12-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_source_iface_is_set): New function.

	* base/openvas_networking.h: Add new function prototype.

	* misc/pcap.c (v6_getsourceip, getsourceip): Don't recheck source
	interface as callers already do it. Remove verbose error prints.

	* misc/pcap_openvas.h: Add function prototype.

	* nasl/nasl_host.c (nasl_this_host): Check if source_iface is set before
	trying to use its address. Refactor code to better handle error returns.

2013-11-26  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/nvti.c (set_from_key): New function.
	(nvti_from_keyfile): Use set_from_key to set the string fields, so that
	UTF-8 conversion is always done.  Convert preferences to UTF-8.
	(set_from_nvti): New function.
	(nvti_to_keyfile): Use set_from_nvti to write strings to the keyfile, so
	that ISO conversion is always done.  Convert preferences to ISO.

2013-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Remove obsolete certificate_file implementation.

	* base/openvas_certificate_file.c, base/openvas_certificate_file.h:
	Removed. This was used for saving certificate information to files and
	was only used in the now obsolete Gtk client.

	* base/CMakeLists.txt: Remove handling of openvas_certificate_file.c
	and openvas_certificate_file.h.

	* COPYING: Remove reference to openvas_certificate_file.c and
	openvas_certificate_file.h. Bump date.

2013-11-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Remove obsolete severity_filter implementation.

	* base/severity_filter.c, base/severity_filter.h: Removed. This was a
	early client side implementation of the overrides concept and was only
	used in the now obsolete Gtk client.

	* base/CMakeLists.txt: Remove handling of severity_filter.c and
	severity_filter.h.

	* COPYING: Remove reference to severity_filter.c and
	severity_filter.h.

2013-11-22  Michael Wiegand <michael.wiegand@greenbone.net>
