@@ -26,6 +26,11 @@ which may be a single host (127.0.0.1), a whole subnet (192.168.1.0/24)
 or several subnets (192.168.1.0/24, 192.168.243.0/24)
 
 .TP
+.B \-e iface
+Specifies the network interface to be used as the source for established
+connections.
+
+.TP
 .B \-s
 Sets the return value of safe_checks() to 1. (See the OpenVAS documentation to know
 what the safe checks are)
